[tool.poetry]
name = "prefect-test"
version = "0.0.1"
description = ""
authors = ["Thibauld Croonenborghs <thibauld.croonenborghs@tomtom.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["github", "kubernetes", "azure"], version = "^0.15.10"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
